# ucb-stat-159-f25-classroom-final-final

./: .gitignore  1-intro_exploration.ipynb  2-finding_associations.ipynb  3-identify_archetypes-Copy1.ipynb  3-identify_archetypes.ipynb  LICENSE  Makefile  Predicting recovery days.ipynb  README.md  ai-documentation.txt  ai_documentation.txt  contribution_statement.md  data_scraping.ipynb  eda.ipynb  environment.yml  exploratory_data_analysis.ipynb  feature_engineering.ipynb  main.ipynb  myst.yml  project-description.md  pyproject.toml  references.bib  temp_contributions.md
.github/workflows/: deploy.yml
data/: CPIForecast.csv  PPIForecast.csv  char_gmm2.csv  char_gmm6.csv  character-key.csv  codebook.html  final_2024_player.csv  final_2025_player.csv  gmm_vs_hier.csv  gmm_vs_hier7.csv  hier_cluster_dim.csv  hier_cluster_dim7.csv  historicalppi.csv  pca_comp_loadings.csv  target_correlations.csv  target_partial_corr.csv  variable-key.csv
data/processed/eda_summary/: ppi_volatility.csv
data/processed/q1_outputs/: cpi_mean_recent_window.csv  ppi_mean_recent_window.csv  q1_combined_cpi_ppi_summary.csv  q1_cpi_top5_summary.csv  q1_ppi_top5_summary.csv
data/processed/summary_tables/: cpi_mean_inflation.csv  cpi_volatility.csv  ppi_mean_inflation.csv
finaltools/: __init__.py  finaltools.py
finaltools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
finaltools/tests/: test_finaltools.py
nba_scraper/: data_scraping.py  feature_engineering.py
nba_scraper/tests/: test_feature.py  test_scraping.py
notebooks/: EDA.ipynb  Food Inflation Across Major Economic Periods.ipynb  Q1.ipynb  food_inflation_across_major_economic_periods.ipynb  healthy_vs_unhealthy_inflation.ipynb
utilities/: functions.py
utilities/tests/: test_functions.py
